EKS/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unmute
  labels:
    name: unmute
